# funera

./: .gitignore  Cargo.toml  README.md  deepseek-api-format.md  deny.toml  err.txt  release.toml
.github/workflows/: audit.yml  cd.yml  ci.yml
builtin_tools/: Cargo.toml
builtin_tools/src/: edit.rs  hashline.rs  lib.rs  read.rs  sandbox_win.rs  shell.rs  write.rs
funera-orchestrate/: Cargo.toml
funera-orchestrate/examples/: 01_fire_basic.rs  02_send_multi_turn.rs  03_streaming.rs  04_custom_tool.rs  05_switch_runtime.rs  06_builtin_tools.rs  07_reset_session.rs  08_skills.rs  09_all_modules.rs  builtin_tools.rs  custom_tool.rs  middleware.rs  minimal.rs  multi_runtime.rs  multi_turn.rs  raw_events.rs  sandbox.rs  security.rs  session_reset.rs  skills.rs  streaming.rs  streaming_with_tools.rs  tool_policy.rs
funera-orchestrate/src/: agent.rs  dispatcher.rs  error.rs  event.rs  lib.rs  middleware_bundle.rs  orchestrator.rs  response.rs  runtime.rs  send_handle.rs
funera-orchestrate/tests/: integration.rs
funera_builtin_tools/: Cargo.toml
funera_builtin_tools/src/: edit.rs  lib.rs  read.rs  shell.rs  write.rs
funera_core/: Cargo.toml
funera_core/src/: env.rs  env_actor.rs  event_bus.rs  lib.rs  middleware.rs  provider.rs  re_act.rs  security.rs  test_helpers.rs
funera_core/src/chat/: message.rs  session.rs
funera_core/src/event_bus/: env_state_bus.rs  react_bus.rs  token_bus.rs  tool_bus.rs
funera_core/src/provider/: deepseek.rs  openai.rs
funera_core/src/re_act/: skills.rs  tool.rs  tool_executor.rs
funera_core/src/security/: audit.rs  boundary.rs  path_guard.rs  policy.rs  registry.rs  sandbox.rs  sandbox_win.rs  secret.rs
funera_core_tune/: .env.example  Cargo.toml
funera_core_tune/src/: lib.rs  scenarios.rs  utils.rs
funera_core_tune/src/analysis/: metrics.rs  reporter.rs
funera_core_tune/src/debug/: tracer.rs
funera_core_tune/src/scenarios/: complex_conversation.rs  error_recovery.rs  tool_chain.rs
funera_core_tune/src/utils/: env_config.rs  fixtures.rs  harness.rs  mock_client.rs  mock_tool.rs
funera_core_tune/tests/: env.rs  env_integration.rs  event_buses.rs  message.rs  message_pipeline.rs  react_loop_mock.rs  real_llm.rs  session.rs  session_lifecycle.rs  tool.rs  tool_executor.rs
src/: env.rs  lib.rs  main.rs  re_act.rs
src/chat/: message.rs  session.rs
src/re_act/: agent.rs
