[package]
name = "funera"
version = "0.1.1"
edition = "2024"
description = "Flexible and security-oriented LLM agent framework for Rust — ReAct loop, tools, skills, middleware, security"
license = "MIT"
repository = "https://github.com/dynamder/funera"
readme = "README.md"
keywords = ["llm", "agent", "framework", "harness"]
categories = ["artificial-intelligence", "asynchronous"]

[workspace]
resolver = "3"
members = ["builtin_tools", "funera_core", "funera-orchestrate"]

[dependencies]
funera-orchestrate = { path = "./funera-orchestrate", version = "0.1.1" }
funera-core = { path = "./funera_core", version = "0.1.1" }

[features]
default = ["tool", "deepseek"]
builtin-tools = ["funera-orchestrate/builtin-tools"]
openai = ["funera-orchestrate/openai"]
middleware = ["funera-orchestrate/middleware"]
sandbox = ["funera-orchestrate/sandbox", "builtin-tools"]
security = ["funera-orchestrate/security"]
skill = ["funera-orchestrate/skill"]
tool = ["funera-orchestrate/tool"]
deepseek = ["funera-orchestrate/deepseek"]
