[package]
name = "funera"
version.workspace = true
edition.workspace = true
description = "Flexible and security-oriented LLM agent framework for Rust — ReAct loop, tools, skills, middleware, security"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "agent", "framework", "harness"]
categories = ["artificial-intelligence", "asynchronous"]

[workspace]
resolver = "3"
members = ["funera_builtin_tools", "funera_core", "funera-orchestrate"]

[workspace.package]
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/dynamder/funera"

[dependencies]
funera-orchestrate = { path = "./funera-orchestrate", version = "0.2.2" }
funera-core = { path = "./funera_core", version = "0.2.2" }

[features]
default = ["tool", "deepseek"]
funera-builtin-tools = ["funera-orchestrate/funera-builtin-tools"]
openai = ["funera-orchestrate/openai"]
middleware = ["funera-orchestrate/middleware"]
sandbox = ["funera-orchestrate/sandbox", "funera-builtin-tools"]
security = ["funera-orchestrate/security"]
skill = ["funera-orchestrate/skill"]
tool = ["funera-orchestrate/tool"]
deepseek = ["funera-orchestrate/deepseek"]
