[package]
name = "builtin_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
funera_core = { version = "0.1.0", path = "../funera_core", features = ["tool"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["process", "fs", "io-util"] }
twox-hash = "2.1.2"

[target.'cfg(not(windows))'.dependencies]
nono = "0.67"

[features]
sandbox = ["funera_core/sandbox"]
