[package]
name = "funera-orchestrate"
version = "0.1.0"
edition = "2024"
description = "Easy-to-use orchestration layer for funera-core — build LLM agents with a simple builder API"
license = "MIT"
repository = "https://github.com/anomalyco/funera"

[dependencies]
funera_core = { path = "../funera_core" }
builtin_tools = { path = "../builtin_tools", optional = true }
tokio = { version = "1.52.3", features = ["full"] }
async-openai = { version = "0.38.0", features = ["_api", "chat-completion", "responses", "skill"] }
parking_lot = { version = "0.12.5", features = ["serde"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
anyhow = "1.0.102"
futures = "0.3.32"
tracing = "0.1"

[features]
default = []
builtin-tools = ["dep:builtin_tools"]
security = ["funera_core/security"]
real-llm = []

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "test-util"] }

[lib]
name = "funera_orchestrate"
path = "src/lib.rs"

[[example]]
name = "06_builtin_tools"
required-features = ["builtin-tools"]

[[example]]
name = "09_all_modules"
required-features = ["builtin-tools"]
