[package]
name = "funera-orchestrate"
version.workspace = true
edition.workspace = true
description = "Easy-to-use orchestration layer for funera-core — build LLM agents with a simple builder API"
license.workspace = true
repository.workspace = true

[dependencies]
funera-core = { path = "../funera_core", version = "0.2.3" }
funera-builtin-tools = { path = "../funera_builtin_tools", version = "0.2.3", optional = true }
tokio = { version = "1.52.3", features = ["full"] }
async-openai = { version = "0.41.1", features = ["_api", "chat-completion", "responses", "skill"] }
parking_lot = { version = "0.12.5", features = ["serde"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
anyhow = "1.0.103"
futures = "0.3.32"
tracing = "0.1"

[features]
default = ["deepseek", "tool"]
funera-builtin-tools = ["dep:funera-builtin-tools", "funera-core/tool"]
sandbox = ["funera-core/sandbox", "funera-builtin-tools?/sandbox"]
security = ["funera-core/security"]
deepseek = ["funera-core/deepseek"]
openai = ["funera-core/openai"]
real-llm = []
middleware = ["funera-core/middleware"]
tool = ["funera-core/tool"]
skill = ["funera-core/skill"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "test-util"] }

[lib]
name = "funera_orchestrate"
path = "src/lib.rs"

[[example]]
name = "builtin_tools"
required-features = ["funera-builtin-tools"]

[[example]]
name = "middleware"
required-features = ["middleware"]

[[example]]
name = "skills"
required-features = ["skill"]

[[example]]
name = "sandbox"
required-features = ["sandbox", "funera-builtin-tools"]

[[example]]
name = "tool_policy"
required-features = ["security"]

[[example]]
name = "security"
required-features = ["security", "funera-builtin-tools"]

[[example]]
name = "custom_tool"

[[example]]
name = "minimal"

[[example]]
name = "multi_runtime"

[[example]]
name = "multi_turn"

[[example]]
name = "raw_events"

[[example]]
name = "session_reset"

[[example]]
name = "streaming"

[[example]]
name = "streaming_with_tools"
