[package]
name = "funera_core_tune"
version = "0.1.0"
edition = "2024"

[lib]
name = "funera_core_tune"
path = "src/lib.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[dependencies]
anyhow = "1.0.103"
async-openai = "0.41.1"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
crossterm = "0.29.0"
dotenvy = "0.15.7"
funera_core = { path = "../funera_core" }
futures = "0.3.32"
mockall = "0.15.0"
parking_lot = "0.12.5"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[features]
real-llm = []
